Fix navbar flicker on iOS

--- a/src/documents/styles/components/_layout.scss
+++ b/src/documents/styles/components/_layout.scss
@@ -2,10 +2,6 @@
 	box-sizing: border-box;
 }
 
-body {
-	-webkit-transform: translate(0,0);
-}
-
 img {
 	max-width: 100%;
 }
